- Fix the issue that when the window is extra wide or extra narrow or the phone is landscape the "announcement" over the banner becomes unreadable. - Make buttons, speaker images bigger on mobile

--- a/themes/dissent/static/css/mobile.css
+++ b/themes/dissent/static/css/mobile.css
@@ -5,7 +5,7 @@
 .hamburger-menu {
     display: block;
     position: fixed;
-    width: 90%;
+    width: 80%;
     z-index: 2;
     margin: 20px 0 0 0;
     text-align: right;
@@ -38,9 +38,6 @@
     padding: 16px 0;
 }
 
-.announcement-container {
-    top: 0;
-}
 
 .short-about-section-container .text {
     max-width: 80%;
@@ -50,3 +47,23 @@
     height: 50%;
     min-height: unset;
 }
+
+
+
+/* buttons easily clickable on mobile*/
+.button button {width:auto; height:2em;font-size:2em;} 
+
+/* Bigger speakers on mobile*/
+.featured-speakers-container .list .featured-banner {margin:0 5px 25px  5px ; width:30%;padding:0;height: 400px;}
+.featured-speakers-container .list .featured-banner img {margin:0;width:30vw;height:auto;}
+.featured-speakers-container .list .featured-banner .locator {height:auto;}
+.featured-speakers-container .list .featured-banner .featured-description .name {font-size:1.7em}
+.featured-speakers-container .list .featured-banner .featured-description .text {font-size:1em}
+.featured-speakers-container .list .featured-banner .featured-description {height: 5em; }
+
+
+.expect-container .text-container .body p {font-size:1.7em}
+
+.background-picture-container {max-height:100%; } /* for landscape*/
+.announcement-container > div {  font-size: 2em !important }
+.announcement-container .main {  font-size: 2em !important }
