--- a/themes/dissent/static/css/style.css
+++ b/themes/dissent/static/css/style.css
@@ -147,14 +147,16 @@ button {
 
 .menu-row .submenus-container .submenu .submenu-item {}
 
+
 .announcement-container {
     position: absolute;
-    top: -5%;
+    bottom: -5%;
     left: 0;
     margin: 32% auto auto 12%;
     color: #ffffff;
     z-index: 1;
 }
+
 
 .announcement-container .main {
     font-size: 22px;
@@ -311,3 +313,19 @@ button {
 .expect-container .text-container .body .button {
     margin-top: 40px;
 }
+
+
+/* fixes for wide screens */
+body , header { max-width: 1500px;margin-right:auto;margin-left:auto;}
+.menu-row-background { display:none;}
+.menu-row { position:relative;}
+.menu-row .menu-container {margin-right:0;}
+.menu-row .submenus-container .submenu { margin-left:-90px;}
+.announcement-container {bottom: 5%;}
+.background-picture-container {background-image: url('/CD2022_site_landing.jpg');width: 100%;height: 30vh;min-height:600px;background-attachment: initial;background-size: cover;min-width: 1060px;}
+.counter-container {margin-top:10px; }
+
+
+
+/* soft shadows */
+.featured-speakers-container .list .featured-banner .locator { box-shadow: 5px 5px 5px lightgrey;} 
